compiler/tests/fail/x86-64/swap_int.jazz
export
fn main(reg u8 a) -> reg u8 {
  inline int i j;
  i = 0;
  j = 1;
  i, j = #swap(i, j);
  a = a if i < j;
  return a;
}
